--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "firefoxos",
     "testing"
   ],
-  "version": "1.3.5",
+  "version": "1.3.6-beta",
   "author": "https://github.com/appium",
   "licenses": [
     {
