--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "argparse": "~1.0.1",
     "async": "~0.9.0",
     "binary-cookies": "~0.1.1",
+    "bluebird": "^2.9.34",
     "body-parser": "~1.12.0",
     "bplist-creator": "~0.0.5",
     "bplist-parser": "^0.1.0",
